--- a/app/[category]/category.module.css
+++ b/app/[category]/category.module.css
@@ -13,9 +13,35 @@
 }
 
 .card {
-  width: 200px;
-  border: 2px solid black;
+  width: 100%;
+  height: 100%;
+  border: 2px solid #ccc;
+  border-radius: 15px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  padding: 20px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.card span {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.card p {
+  font-size: 1.2rem;
+  margin-bottom: 15px;
+}
+
+.card button {
+  padding: 10px 20px;
+  font-size: 1rem;
+  background-color: #3498db;
+  color: white;
+  cursor: pointer;
+  border-radius: 15px;
+  border: none;
 }
