--- a/app/[category]/category.module.css
+++ b/app/[category]/category.module.css
@@ -51,3 +51,13 @@
   justify-content: center;
   gap: 10px;
 }
+
+.message-container {
+  color: white;
+  font-size: 1.2rem;
+  background-color: #13e143;
+  padding: 10px;
+  border-radius: 15px;
+  display: flex;
+  gap: 20px;
+}
