--- a/app/[category]/[id]/product.module.css
+++ b/app/[category]/[id]/product.module.css
@@ -16,3 +16,15 @@
   display: flex;
   flex-direction: column;
 }
+
+.cart-button {
+  gap: 20px;
+  margin-top: 20px;
+  padding: 5px;
+  font-size: 1rem;
+  background-color: #3498db;
+  color: white;
+  cursor: pointer;
+  border-radius: 10px;
+  border: none;
+}
