--- a/app/globals.css
+++ b/app/globals.css
@@ -46,6 +46,8 @@ nav {
   align-items: center;
   font-size: 20px;
   font-weight: 500;
+
+  position: relative;
 }
 
 .shop input {
@@ -69,7 +71,7 @@ nav {
   gap: 2px;
 }
 
-.dropdown {
+.products-dropdown {
   position: absolute;
   background-color: #002242;
   margin-top: 47px;
@@ -84,6 +86,28 @@ nav {
   animation-name: fade-in;
   animation-duration: 0.5s;
   animation-timing-function: ease-in-out;
+}
+
+.user-dropdown {
+  position: absolute;
+  background-color: #002242;
+  top: 100%;
+  left: 0;
+  padding: 10px 0;
+  z-index: 1;
+  min-width: 100px;
+  border-top: none;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  animation-name: fade-in;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in-out;
+  left: 0;
+  right: unset;
+  transform: translateX(-50%);
+  margin-left: 50%;
 }
 
 @keyframes fade-in {
@@ -105,8 +129,12 @@ nav {
 }
 
 .user-options {
+  display: flex;
+  align-items: center;
   font-size: 20px;
   font-weight: 500;
+
+  position: relative;
 }
 
 .nav-cart,
@@ -115,6 +143,60 @@ nav {
   justify-content: center;
   align-items: center;
   gap: 2px;
+}
+
+@media (max-width: 1000px) {
+  .shop input {
+    width: 200px;
+  }
+}
+
+@media (max-width: 850px) {
+  .logo {
+    font-size: 15px;
+  }
+
+  .product-menu {
+    font-size: 10px;
+  }
+
+  .user-options {
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 570px) {
+  .nav-container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .logo {
+    display: none !important
+  }
+
+  .product-menu {
+    font-size: 20px;
+  }
+
+  .user-options {
+    font-size: 20px;
+    margin-top: 10px;
+  }
+
+}
+
+@media (max-width: 570px) {
+  .user-options {
+    display: flex;
+    align-items: center;
+    font-size: 10px;
+  }
+
+  .product-menu {
+    font-size: 10px;
+  }
 }
 
 /* Login and Register pages */
