add responsive style for cards

--- a/app/globals.css
+++ b/app/globals.css
@@ -297,7 +297,7 @@ nav {
 
 .card-container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 100px;
 }
 
@@ -374,6 +374,20 @@ nav {
   gap: 5px;
   font-size: 1.2rem;
   margin-top: 20px;
+}
+
+@media (max-width: 900px) {
+  .card-container {
+    grid-template-columns: repeat(2, 1fr);
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
+
+@media (max-width: 600px) {
+  .card-container {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
 }
 
 /* Orders/Transactions pages */
