--- a/app/globals.css
+++ b/app/globals.css
@@ -300,7 +300,7 @@ nav {
 .card-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 100px;
+  gap: 50px;
 }
 
 .card {
@@ -312,8 +312,15 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 10px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  margin: 5px;
+}
+
+.card img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
 }
 
 .card span {
