--- a/app/globals.css
+++ b/app/globals.css
@@ -251,7 +251,8 @@ nav {
   font-weight: 500;
 }
 
-.submit-button {
+.submit-button,
+.additional-info-button {
   background-color: #0064E4;
   color: white;
   font-size: 1.2rem;
@@ -260,6 +261,23 @@ nav {
   margin-top: 10px;
   height: 30px;
   cursor: pointer;
+}
+
+.main-info {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.additional-info {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+}
+
+.input-group {
+  display: flex;
+  flex-direction: column;
 }
 
 /* SPINNER */
@@ -292,15 +310,18 @@ nav {
 .card-outer-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   gap: 40px;
 }
 
 .card-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 50px;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+  text-align: center;
 }
 
 .card {
@@ -310,7 +331,6 @@ nav {
   border-radius: 15px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   padding: 10px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
@@ -318,9 +338,10 @@ nav {
 }
 
 .card img {
-  width: 300px;
-  height: 300px;
+  max-width: 100%;
+  height: 200px;
   object-fit: cover;
+  border-radius: 15px 15px 0 0;
 }
 
 .card span {
@@ -388,8 +409,8 @@ nav {
 @media (max-width: 900px) {
   .card-container {
     grid-template-columns: repeat(2, 1fr);
-    margin-left: 10px;
-    margin-right: 10px;
+    gap: 30px;
+    padding: 0 10px;
   }
 }
 
