add login button styles

--- a/app/[category]/[id]/product.module.css
+++ b/app/[category]/[id]/product.module.css
@@ -22,7 +22,8 @@
   flex-direction: column;
 }
 
-.cart-button {
+.cart-button,
+.login-button {
   gap: 20px;
   margin-top: 20px;
   padding: 5px;
