--- a/app/globals.css
+++ b/app/globals.css
@@ -316,12 +316,13 @@ nav {
 
 .card-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 50px;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  gap: 40px;
   max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
+  margin: 10px;
   text-align: center;
+  justify-items: center;
+  box-sizing: border-box;
 }
 
 .card {
@@ -406,6 +407,13 @@ nav {
   margin-top: 20px;
 }
 
+@media (max-width: 1100px) {
+  .card-container {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+}
+
 @media (max-width: 900px) {
   .card-container {
     grid-template-columns: repeat(2, 1fr);
@@ -414,9 +422,9 @@ nav {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 500px) {
   .card-container {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: 1fr;
   }
 }
 
