add table button and input styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -58,7 +58,6 @@ nav {
   align-items: center;
   font-size: 20px;
   font-weight: 500;
-
   position: relative;
 }
 
@@ -68,7 +67,7 @@ nav {
   border-radius: 20px;
   padding: 5px 10px;
   border: 1px solid var(--form-bg-color);
-  background-color: var(--form-input-color);
+  background-color: var(--form-bg-color);
   color: white;
 }
 
@@ -495,7 +494,7 @@ nav {
 }
 
 .orders-table th {
-  background-color: #f2f2f2;
+  background-color: var(--form-bg-color);
 }
 
 .orders-table td {
@@ -503,20 +502,23 @@ nav {
 }
 
 .orders-table tbody tr:hover {
-  background-color: #eaeaea;
+  background-color: var(--form-bg-color);
 }
 
 .orders-table select {
   padding: 0.5rem;
-  border: 1px solid #ccc;
+  background-color: var(--main-button-color);
+  color: white;
+  border: none;
 }
 
 .orders-table button {
   padding: 0.5rem 1rem;
   margin-left: 0.5rem;
-  background-color: #3498db;
-  color: #fff;
+  background-color: var(--main-button-color);
+  color: white;
   cursor: pointer;
+  border: none;
 }
 
 .orders-table button:disabled {
