--- a/app/home.module.css
+++ b/app/home.module.css
@@ -31,6 +31,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 10px;
+  border: none;
   color: white;
   font-size: 14px;
   font-weight: bold;
