change some styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,9 +6,9 @@
 
 :root {
   --form-bg-color: #044c94;
-  --nav-bg-color: #002242;
-  --main-button-color: #0064E4;
-  --background-color: #053456;
+  --nav-bg-color: #F2F2F2;
+  --main-button-color: white;
+  --background-color: #F2F2F2;
   --form-input-color: #5096f2;
   --input-focus-color: #8ec2ff;
 }
@@ -17,7 +17,7 @@ html,
 body {
   max-width: 100vw;
   background-color: var(--background-color);
-  color: white;
+  color: black;
 }
 
 a {
@@ -28,7 +28,6 @@ a {
 nav {
   background-color: var(--nav-bg-color);
   padding: 5px;
-  color: white;
   position: sticky;
   top: 0;
   width: 100%;
@@ -65,18 +64,12 @@ nav {
   height: 40px;
   border-radius: 20px;
   padding: 5px 10px;
-  border: 1px solid var(--form-bg-color);
-  background-color: var(--form-bg-color);
-  color: white;
-}
-
-.shop input::placeholder {
-  color: white;
+  border: 1px solid gray;
+  background-color: var(--background-color)
 }
 
 .shop input:focus {
   outline: none;
-  border-color: var(--input-focus-color);
 }
 
 .product-menu {
@@ -146,7 +139,7 @@ nav {
 }
 
 .dropdown-link:hover {
-  background-color: #093f86;
+  background-color: #c3c8cf;
 }
 
 .user-options {
@@ -238,7 +231,7 @@ nav {
   padding: 30px;
   border-radius: 10px;
   border: 2px solid #002242;
-  background-color: var(--nav-bg-color);
+  background-color: aliceblue;
 }
 
 .form-container-header {
@@ -261,13 +254,6 @@ nav {
   border-radius: 5px;
   padding: 5px 10px;
   border: 1px solid var(--form-bg-color);
-  background-color: var(--form-bg-color);
-  color: white;
-}
-
-.form-container input:focus {
-  outline: none;
-  border-color: var(--input-focus-color)
 }
 
 .link-msg {
@@ -275,21 +261,19 @@ nav {
 }
 
 .link-click {
-  color: rgb(143, 143, 255);
+  color: rgb(102, 102, 253);
   font-weight: 500;
 }
 
 .submit-button,
 .additional-info-button {
-  background-color: var(--main-button-color);
-  color: white;
+  background-color: rgb(212, 231, 248);
   font-size: 1.2rem;
   font-weight: 500;
   border-radius: 5px;
   margin-top: 10px;
   height: 30px;
   cursor: pointer;
-  border: none;
 }
 
 .main-info {
@@ -372,8 +356,6 @@ nav {
 .card {
   width: 100%;
   height: 100%;
-  border: 1px solid #326efa;
-  background-color: var(--form-bg-color);
   border-radius: 15px;
   display: flex;
   flex-direction: column;
@@ -392,8 +374,14 @@ nav {
   border-radius: 15px 15px 0 0;
 }
 
+.card-name {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
 .card span {
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: bold;
   margin-bottom: 10px;
 }
@@ -409,16 +397,14 @@ nav {
   padding: 10px;
   font-size: 1rem;
   background-color: var(--main-button-color);
-  color: white;
   cursor: pointer;
   border-radius: 15px;
   border: none;
 }
 
 .card input {
-  border: 1px solid var(--form-bg-color);
-  background-color: var(--form-input-color);
-  color: white;
+  border: 1px solid black;
+  background-color: var(--background-color);
 }
 
 .card input:focus {
