--- a/app/home.module.css
+++ b/app/home.module.css
@@ -2,48 +2,69 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
-}
-
-.carousel-container {
-  max-width: 80%;
-}
-
-.carousel-image {
-  max-height: 400px;
-  max-width: 100%;
-  width: 100%;
-  height: auto;
-  object-fit: cover;
+  min-height: 100vh;
 }
 
 .image-container {
   position: relative;
+  width: 100%;
 }
 
-.image-link {
-  height: 40px;
-  width: 120px;
-  background-color: var(--main-button-color);
-  cursor: pointer;
+.cover-image {
+  height: 100vh;
+  width: 100%;
+  object-fit: cover;
+}
+
+.cover-button {
   position: absolute;
-  top: 80%;
+  cursor: pointer;
+  height: 50px;
+  width: 150px;
   left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 10px;
+  bottom: 150px;
+  transform: translateX(-50%);
+  border-radius: 5px;
+  font-size: 1rem;
+  background-color: white;
   border: none;
-  font-size: 14px;
-  font-weight: bold;
-  transition: background-color 0.3s ease;
+  letter-spacing: 1px;
 }
 
-.image-link:hover {
-  background-color: #cdd2d8;
+.cover-button:hover {
+  background-color: #eef1f4;
+  font-size: 1.2rem;
+}
+
+.top-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+  text-align: center;
+}
+
+.top-text p {
+  width: 600px;
+  font-size: 2.2rem;
+  font-weight: 600;
+}
+
+.heading-container {
+  background-color: #123026;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  min-height: 80px;
+  margin-bottom: 20px;
+  font-size: 1.2rem;
 }
 
 .card-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   max-width: 1200px;
   gap: 30px;
   margin: 20px;
