--- a/app/home.module.css
+++ b/app/home.module.css
@@ -81,7 +81,6 @@
 @media (max-width: 1100px) {
   .card-container {
     gap: 10px;
-    grid-template-columns: repeat(4, 1fr);
     margin: 10px;
   }
 }
@@ -97,10 +96,24 @@
   .card-container {
     grid-template-columns: 1fr 1fr;
   }
+
+  .top-text p {
+    width: 400px;
+    font-size: 2rem;
+  }
+
+  .heading-container {
+    font-size: 1rem;
+  }
 }
 
 @media (max-width: 500px) {
   .card-container {
     grid-template-columns: 1fr;
+  }
+
+  .top-text p {
+    width: 300px;
+    font-size: 1.5rem;
   }
 }
