--- a/app/[category]/[id]/product.module.css
+++ b/app/[category]/[id]/product.module.css
@@ -21,12 +21,12 @@
 .product-info {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
+  align-items: flex-start;
 }
 
 .product-info h1 {
   font-size: 3rem;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .product-info p {
@@ -34,30 +34,38 @@
 }
 
 .price-info {
-  font-size: 1.5rem;
-  margin-bottom: 20px;
+  font-size: 22px;
+  border-radius: 8px;
+  margin-bottom: 24px;
   font-weight: 500;
+  padding: 6px 16px 3px 16px;
+  background-color: var(--main-button-color);
+  color: white;
+  flex-shrink: 1;
+  /*#2d5045;*/
 }
 
 .cart-button,
 .login-button {
-  gap: 20px;
-  margin-top: 20px;
-  padding: 5px;
+  margin-top: 50px;
+  padding: 10px 8px 5px 8px;
   font-size: 1rem;
-  background-color: var(--main-button-color);
-  color: white;
+  font-weight: 600;
+  background: none;
+  color: #2d5045;
   cursor: pointer;
-  border-radius: 10px;
   border: none;
-  width: 200px;
+  border-bottom: 1px solid #2d5045;
+  display: flex;
+  align-items: center;
 }
 
 .product-additional-info {
   display: flex;
   flex-direction: column;
   font-size: 1.2rem;
-  margin-top: 10px;
+  margin-top: 3px;
+  gap: 8px;
 }
 
 .info-container {
@@ -71,6 +79,8 @@
   border: none;
   background-color: inherit;
   font-size: 1.5rem;
+  font-weight: 600;
+  cursor: pointer;
 }
 
 .description-info,
