--- a/app/home.module.css
+++ b/app/home.module.css
@@ -8,66 +8,41 @@
 .image-container {
   position: relative;
   width: 100%;
+  background-color: black;
 }
 
 .cover-image {
-  height: 100vh;
+  height: 70vh;
   width: 100%;
   object-fit: cover;
+  opacity: 0.4;
 }
 
-.cover-button {
+.image-container span {
   position: absolute;
-  cursor: pointer;
-  height: 50px;
-  width: 150px;
-  left: 50%;
-  bottom: 150px;
-  transform: translateX(-50%);
-  border-radius: 5px;
-  font-size: 1rem;
-  background-color: white;
-  border: none;
-  letter-spacing: 1px;
-}
-
-.cover-button:hover {
-  background-color: #eef1f4;
-  font-size: 1.2rem;
-}
-
-.top-text {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 300px;
-  text-align: center;
-}
-
-.top-text p {
-  width: 600px;
-  font-size: 2.2rem;
-  font-weight: 600;
-}
-
-.heading-container {
-  background-color: var(--heading-bg-color);
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  top: 50%;
+  left: 10%;
+  width: 700px;
   color: white;
-  min-height: 80px;
-  margin-bottom: 20px;
-  font-size: 1.2rem;
+  font-size: 3rem;
+  font-weight: bolder;
+  border-top: 10px solid #AA8FAB;
+}
+
+.card-outer-container {
+  margin-top: 50px;
+}
+
+.card-outer-container h2 {
+  font-weight: 700;
+  font-size: 2rem;
 }
 
 .card-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  max-width: 1200px;
-  gap: 30px;
-  margin: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  margin-top: 20px;
+  gap: 40px;
   padding-bottom: 20px;
   text-align: center;
   justify-items: center;
@@ -78,17 +53,17 @@
   padding: 6px;
 }
 
-@media (max-width: 1100px) {
-  .card-container {
-    gap: 10px;
-    margin: 10px;
-  }
-}
-
 @media (max-width: 1000px) {
   .card-container {
     gap: 10px;
     grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 800px) {
+  .image-container span {
+    width: 500px;
+    font-size: 2rem;
   }
 }
 
@@ -107,13 +82,22 @@
   }
 }
 
+@media (max-width: 600px) {
+  .image-container span {
+    top: 60%;
+    width: 400px;
+    font-size: 1.5rem;
+  }
+}
+
 @media (max-width: 500px) {
   .card-container {
     grid-template-columns: 1fr;
   }
 
-  .top-text p {
+  .image-container span {
+    top: 70%;
     width: 300px;
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
 }
